[package]
name = "spotify-month"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.58"
clap = "3.2.8"
dirs = "4.0.0"
rspotify = { version = "0.11.5", features = ["cli"] }
tokio = { version = "1.19.2", features = ["full"] }
