[package]
name = "spotify-month"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.58"
async-recursion = "1.0.0"
chrono = { version = "0.4.19", features = ["unstable-locales"] }
clap = "3.2.8"
dirs = "4.0.0"
futures = "0.3.21"
log = "0.4.17"
num-traits = "0.2.15"
reqwest = "0.11.11"
rspotify = { version = "^0.11.5", features = ["cli"] }
tokio = { version = "1.19.2", features = ["full"] }
webbrowser = "0.7.1"
